--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
