--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/index.js",
+    "postinstall": "npx prisma generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -27,6 +28,7 @@
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.14.0",
     "typescript": "^5.9.2",
     "zod": "^4.0.17"
   },
@@ -36,7 +38,6 @@
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "nodemon": "^3.1.10",
-    "prisma": "^6.14.0",
     "ts-node": "^10.9.2"
   }
 }
