--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,12 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "allowJs": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "strict": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
@@ -26,6 +29,6 @@
     "typeRoots": ["./node_modules/@types", "./node_modules/@types/node"],
     "types": []
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "*.ts", "**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
