refactor: update build process and TypeORM configuration
- Added prebuild and postinstall scripts to clean and build the project.
- Modified the build script to copy data-source.ts to the dist directory.
- Updated TypeORM commands to use npm run for better consistency.
- Created a new data-source.ts file for TypeORM CLI compatibility.
- Imported reflect-metadata in index.ts for TypeORM functionality.
- Changed rootDir in tsconfig.json to ./src for better structure.
- Updated tsconfig.json to include only src/**/* in the include array.
- Added tsconfig.typeorm.json for TypeORM-specific TypeScript configuration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "strictPropertyInitialization": false,
     "allowJs": true,
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./src",
     "strict": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
@@ -29,6 +29,6 @@
     "typeRoots": ["./node_modules/@types", "./node_modules/@types/node"],
     "types": []
   },
-  "include": ["src/**/*", "*.ts", "**/*.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
