--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
+    "prebuild": "rimraf dist",
+    "build": "tsc && cp data-source.ts dist/",
+    "postinstall": "npm run build",
     "start": "node dist/index.js",
-    "typeorm": "typeorm-ts-node-commonjs",
-    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d data-source.ts src/migrations/Migration",
-    "migration:run": "typeorm-ts-node-commonjs migration:run -d data-source.ts",
-    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d data-source.ts",
-    "db:sync": "typeorm-ts-node-commonjs schema:sync -d data-source.ts"
+    "typeorm": "typeorm-ts-node-commonjs -d data-source.ts",
+    "migration:generate": "npm run typeorm -- migration:generate src/migrations/Migration",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "db:sync": "npm run typeorm -- schema:sync"
   },
   "keywords": [],
   "author": "",
@@ -40,6 +42,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0"
   }
