--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "migration:generate": "npm run typeorm -- migration:generate src/migrations/Migration",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert",
-    "db:sync": "npm run typeorm -- schema:sync"
+    "db:sync": "npm run typeorm -- schema:sync",
+    "render-build": "npm ci && npm run build && npm run migration:run"
   },
   "keywords": [],
   "author": "",
