--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^24.3.0",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -36,6 +37,7 @@
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.26",
     "typescript": "^5.9.2",
+    "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
